--- a/core-service/src/main/resources/application-test.yaml
+++ b/core-service/src/main/resources/application-test.yaml
@@ -5,22 +5,18 @@ server:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:market-core;MODE=PostgreSQL
+    url: jdbc:h2:mem:test-market-core;MODE=PostgreSQL
     username: sa
     password:
-jpa:
+  jpa:
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-h2:
+  h2:
     console:
       enabled: true
       settings:
         web-allow-others: false
-integrations:
-  cart-service:
-    url: http://localhost:8190/market-cart
-    connect-timeout: 500
-    read-timeout: 1000
-    write-timeout: 50
+  flyway:
+    locations: classpath:/db/test
